<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/detailDentistNameTXTview"
        android:id="@+id/detailDentistNameTXTview"
        android:layout_gravity="left|center_vertical"
        android:textColor="@color/Text.Color"
        android:textSize="25sp"
        android:gravity="left|start"
        android:layout_weight="0"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:id="@+id/addressLineLayout"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Street Address"
                android:id="@+id/streetAddressTXTview"
                android:textSize="20sp"
                android:layout_marginTop="1sp"
                android:layout_marginBottom="1sp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="ZIP code City"
                android:id="@+id/ZIPcityTXTview"
                android:textSize="20sp"
                android:layout_marginTop="1sp"
                android:layout_marginBottom="1sp"
                android:layout_weight="1" />
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/GoogleMapsImageView"
            android:src="@mipmap/ic_launch_maps"
            android:contentDescription="@string/GoogleMapsImageView"
            android:background="@drawable/button_selector"
            android:layout_weight="0" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:id="@+id/phoneLineLayout"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10sp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0401234567"
            android:id="@+id/phoneTXTview"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneImageView"
            android:src="@mipmap/ic_launch_phone"
            android:contentDescription="@string/phoneImageView"
            android:background="@drawable/button_selector" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linkLineLayout"
        android:layout_weight="0"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="http://www.sivusto.fi"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="13sp"
            android:id="@+id/linkTXTview" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/browserImageView"
            android:src="@mipmap/ic_launch_browser"
            android:contentDescription="@string/browserImageView"
            android:background="@drawable/button_selector" />
    </LinearLayout>


</LinearLayout>
